# gocase

./: README.md
backend/: .env.template  README.md  database.db  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 5e791b5ed6eb_add_users_table.py  6b4853fdc955_created_feedback_tables.py  c485c259942f_add_message_store_table.py  c5e3c4291847_added_explanation_in_answer_table.py
backend/src/: app.py  security.py  settings.py
backend/src/assistant/: assistant_config.py  iago_assistant.yaml
backend/src/database/: database.py  models.py
backend/src/routers/: auth.py  collaborators.py  feedback.py  iago.py  leaders.py  users.py
backend/src/schemas/: feedback.py  users.py
backend/src/utils/: yaml.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.tsx  routes.tsx
frontend/src/components/: LogoutButton.tsx  PrivateRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardCollaborator.tsx  DashboardLeader.tsx  Login.tsx
